# RoboLaunch

./: .gitignore  GUIDE-INNO-SETUP.md  README.md  build-squashfs.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
guest-scripts/: mcp-stub.cjs  roblox-mcp-proxy.cjs  robolaunch-aider-setup  robolaunch-authkeys  robolaunch-net-up  robolaunch-path.sh  robolaunch-ssh-keygen  robolaunch-user-volume-init  robolaunch-warden  robolaunch-warden-lib.sh  robolaunch-zram
installer/: BUILD.bat  README-INSTALLER.md  build-installer.ps1  installer-preview.html  installer.nsi  robolaunch-setup.iss
installer/assets/: LICENSE.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/vm/: PLACE-VM-FILES-HERE.txt
src-tauri/src/: main.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/mcp/: gateway.rs  mod.rs  roblox_proxy.rs
src-tauri/src/vm/: lifecycle.rs  mod.rs  ssh.rs
