[package]
name = "robo-launch"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "robo-launch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.7", features = ["multipart"] }
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace"] }
russh              = "0.44"
russh-keys         = "0.44"
async-trait        = "0.1"
uuid               = { version = "1", features = ["v4"] }
rand               = "0.8"
base64             = "0.22"
sha2               = "0.10"
hex                = "0.4"
anyhow             = "1"
thiserror          = "1"
tracing            = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell          = "1"
tokio-util         = { version = "0.7", features = ["codec"] }
futures            = "0.3"
bytes              = "1"
tempfile           = "3"
dirs               = "5.0"

[features]
default            = ["custom-protocol"]
custom-protocol    = ["tauri/custom-protocol"]
